--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://hshobhith196:NbYkigY5TgAoOKVG@cluster0.pmoolqt.mongodb.net/farm
-
-
+TWILIO_ACCOUNT_SID=AC6828a61136cd09b9f3f59d054850d4d2
+TWILIO_AUTH_TOKEN=1f8ad7248a8538f43d08a3f6c1e461d7
 
 mongodb+srv://hshobhith196:4rHBA78HbiNMfRFq@cluster0.pmoolqt.mongodb.net/farm?retryWrites=true&w=majority
 
