--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://hshobhith196:NbYkigY5TgAoOKVG@cluster0.pmoolqt.mongodb.net/farm
+MONGO_URI=mongodb+srv://padpufarms:j9Ip9o4u9beupKgH@cluster0.k2lv70s.mongodb.net/
 TWILIO_ACCOUNT_SID=AC6828a61136cd09b9f3f59d054850d4d2
 TWILIO_AUTH_TOKEN=1f8ad7248a8538f43d08a3f6c1e461d7
 CLOUDINARY_CLOUD_NAME=dylcvvtox
